correcciones del proyecto

--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
               <div class="dropdown-menu gris01" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item gris02" href="#">Inicio</a>
                 <a class="dropdown-item gris02" href="procedimientos/nosotros.html">Nosotros</a> 
-                <a class="dropdown-item gris02" href="#">Documentos académicos</a> 
-                <a class="dropdown-item gris02" href="#">Cronograma académico</a>
+                <a class="dropdown-item gris02" href="procedimientos/documentos-academicos.html">Documentos académicos</a> 
+                <a class="dropdown-item gris02" href="procedimientos/cronograma-academico.html">Cronograma académico</a>
               </div>
             </li>
             <li class="nav-item my-menu-hover">
