--- a/procedimientos/GestMatricula.html
+++ b/procedimientos/GestMatricula.html
@@ -49,7 +49,9 @@
                   <a class="nav-link dropdown-toggle my-menu active" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">INICIO</a>
                   <div class="dropdown-menu gris01" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item gris02" href="../index.html">Inicio</a>
-                    <a class="dropdown-item gris02" href="./nosotros.html">Nosotros</a>  
+                    <a class="dropdown-item gris02" href="./nosotros.html">Nosotros</a>
+                    <a class="dropdown-item gris02" href="documentos-academicos.html">Documentos académicos</a> 
+                    <a class="dropdown-item gris02" href="cronograma-academico.html">Cronograma académico</a>   
                   </div>
                 </li>
                 <li class="nav-item my-menu-hover d-flex align-items-center justify-content-center">
@@ -122,8 +124,8 @@
                             <div class="card" style="width: 18rem;">
                               <div class="card-body">
                                 <h5>REGLAMENTOS</h5>
-                                <p>Documento.pdf</p>
-                                <a href="#" class="card-link">Ver/Descargar</a>
+                                <p>LISTADO DE DOCUMENTOS REQUERIDOS INGRESANTES </p>
+                                <a href="../formatos/Listado documentos requeridos ingresantes.pdf" class="card-link" target="_blank">Ver/Descargar</a>
                               </div>
                             </div>
                             <div class="card" style="width: 18rem;">
@@ -150,8 +152,8 @@
                             <div class="card" style="width: 18rem;">
                               <div class="card-body">
                                 <h5>REGLAMENTOS</h5>
-                                <p>Documento.pdf</p>
-                                <a href="#" class="card-link">Ver/Descargar</a>
+                                <p>DOCUMENTOS REQUERIDOS PARA LA REACTUALIZACIÓN</p>
+                                <a href="../formatos/Listado de documentos requeridos para regularización.pdf" class="card-link" target="blank">Ver/Descargar</a>
                               </div>
                             </div>
                             <div class="card" style="width: 18rem;">
@@ -167,7 +169,7 @@
                       <!-- TERCER CONTENEDOR -->
                       <div class="tab-pane fade" id="v-pills-gm-tres" role="tabpanel" aria-labelledby="v-pills-gm-tres-tab">
                         <div class="row my-2 style-pill">
-                          <h4 class="subtitulo">Reserva de matricula</h4> 
+                          <h4 class="subtitulo">Reserva de matrícula</h4> 
                         </div>
                         <div class="row my-2 style-pill">
                           <div class="col-12 col-lg-8 img-regl">
@@ -179,8 +181,8 @@
                             <div class="card" style="width: 18rem;">
                               <div class="card-body">
                                 <h5>REGLAMENTOS</h5>
-                                <p>Documento.pdf</p>
-                                <a href="#" class="card-link">Ver/Descargar</a>
+                                <p>PAUTAS PARA RESERVA DE MATRÍCULA</p>
+                                <a href="../formatos/reserva matricula.pdf" class="card-link" target="_blank">Ver/Descargar</a>
                               </div>
                             </div>
                             <div class="card" style="width: 18rem;">
@@ -323,6 +325,20 @@
                           <div class="col-12 col-lg-4 img-regl">
                             <div class="card" style="width: 18rem;">
                               <div class="card-body">
+                                <h5>REGLAMENTOS</h5>
+                                <p>PAUTAS DE CONVALIDACIONES</p>
+                                <a href="../formatos/PAUTAS-DE-CONVALIDACIONES-2020.pdf" class="card-link" target="_blank">Ver/Descargar</a>
+                              </div>
+                            </div>
+                            <div class="card" style="width: 18rem;">
+                              <div class="card-body">
+                                <h5>FORMATO</h5>
+                                <p>FORMATO CONVALIDACIONES</p>
+                                <a href="../formatos/CONVALIDACIONES_formato.pdf" class="card-link" target="_blank">Ver/Descargar</a>
+                              </div>
+                            </div>
+                            <div class="card" style="width: 18rem;">
+                              <div class="card-body">
                                 <h5>FORMATO</h5>
                                 <p>SOLICITUD DE CONVALIDACIONES</p>
                                 <a href="../formatos/Formato 1 Sol Convalidaciones.pdf" class="card-link" target="_blank">Ver/Descargar</a>
@@ -360,15 +376,15 @@
                             <div class="card" style="width: 18rem;">
                               <div class="card-body">
                                 <h5>REGLAMENTOS</h5>
-                                <p>Documento.pdf</p>
-                                <a href="#" class="card-link">Ver/Descargar</a>
+                                <p>REGLAMENTO EVALUACIÓN POR JURADO</p>
+                                <a href="../formatos/PROCEDIMIENTO EVA. POR JURADO.pdf" class="card-link" target="_blank">Ver/Descargar</a>
                               </div>
                             </div>
                             <div class="card" style="width: 18rem;">
                               <div class="card-body">
-                                <h5>REGLAMENTOS</h5>
-                                <p>Documento.pdf</p>
-                                <a href="#" class="card-link">Ver/Descargar</a>
+                                <h5>CRONOGRAMA</h5>
+                                <p>EVALUACIÓN POR JURADO</p>
+                                <a href="../formatos/CRONOGRAMA-JURADO-2020-A.pdf" class="card-link" target="_blank">Ver/Descargar</a>
                               </div>
                             </div>
                           </div>
