--- a/procedimientos/consultas.html
+++ b/procedimientos/consultas.html
@@ -93,7 +93,9 @@
               <a class="nav-link dropdown-toggle my-menu active" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">INICIO</a>
               <div class="dropdown-menu gris01" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item gris02" href="../index.html">Inicio</a>
-                <a class="dropdown-item gris02" href="nosotros.html">Nosotros</a>  
+                <a class="dropdown-item gris02" href="nosotros.html">Nosotros</a>
+                <a class="dropdown-item gris02" href="documentos-academicos.html">Documentos académicos</a> 
+                <a class="dropdown-item gris02" href="cronograma-academico.html">Cronograma académico</a>  
               </div>
             </li>
             <li class="nav-item my-menu-hover">
@@ -242,8 +244,5 @@
       integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
       crossorigin="anonymous"
     ></script>
-    <!-- MAPA -->
-    <!-- <script src="js/scripts.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAiDgCnpLVAp2jBNgKzxwF8mssTuLRlJ3w"></script> -->
   </body>
 </html>
