--- a/procedimientos/gestDocente.html
+++ b/procedimientos/gestDocente.html
@@ -49,7 +49,9 @@
                   <a class="nav-link dropdown-toggle my-menu active" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">INICIO</a>
                   <div class="dropdown-menu gris01" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item gris02" href="../index.html">Inicio</a>
-                    <a class="dropdown-item gris02" href="./nosotros.html">Nosotros</a>  
+                    <a class="dropdown-item gris02" href="./nosotros.html">Nosotros</a>
+                    <a class="dropdown-item gris02" href="documentos-academicos.html">Documentos académicos</a> 
+                    <a class="dropdown-item gris02" href="cronograma-academico.html">Cronograma académico</a>   
                   </div>
                 </li>
                 <li class="nav-item my-menu-hover d-flex align-items-center justify-content-center">
@@ -142,16 +144,16 @@
                           <div class="col-12 col-lg-4 img-regl ">
                             <div class="card" style="width: 18rem;">
                               <div class="card-body">
-                                <h5>REGLAMENTOS</h5>
-                                <p>Documento.pdf</p>
-                                <a href="#" class="card-link">Ver/Descargar</a>
+                                <h5>FORMATO</h5>
+                                <p>LABOR LECTIVA</p>
+                                <a href="../formatos/Labor lectiva.pdf" class="card-link" target="_blank">Ver/Descargar</a>
                               </div>
                             </div>
                             <div class="card" style="width: 18rem;">
                               <div class="card-body">
                                 <h5>REGLAMENTOS</h5>
-                                <p>Documento.pdf</p>
-                                <a href="#" class="card-link">Ver/Descargar</a>
+                                <p>REGLAMENTO PARA LA DISTRIBUCIÓN DE LABOR LECTIVA Y NO LECTIVA DEL PERSONAL DOCENTE</p>
+                                <a href="../formatos/REGLAMENTO PARA LA DISTRIBUCION DE LA LABOR NO LECTIVA DEL PERSONAL DOCENTE.pdf" class="card-link" target="_blank">Ver/Descargar</a>
                               </div>
                             </div>
                           </div>
@@ -171,8 +173,8 @@
                             <div class="card" style="width: 18rem;">
                               <div class="card-body">
                                 <h5>REGLAMENTOS</h5>
-                                <p>Documento.pdf</p>
-                                <a href="#" class="card-link">Ver/Descargar</a>
+                                <p>ASCENSOS MODIFICADO</p>
+                                <a href="../formatos/REGLAMENTO ASCENSOS-MODIFICADO-18-07-2018.pdf" class="card-link" target="_blank">Ver/Descargar</a>
                               </div>
                             </div>
                             <div class="card" style="width: 18rem;">
