--- a/procedimientos/nosotros.html
+++ b/procedimientos/nosotros.html
@@ -106,8 +106,8 @@
               <div class="dropdown-menu gris01" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item gris02" href="../index.html">Inicio</a>
                 <a class="dropdown-item gris02" href="#">Nosotros</a>
-                <a class="dropdown-item gris02" href="#">Documentos académicos</a> 
-                <a class="dropdown-item gris02" href="#">Cronograma académico</a>  
+                <a class="dropdown-item gris02" href="documentos-academicos.html">Documentos académicos</a> 
+                <a class="dropdown-item gris02" href="cronograma-academico.html">Cronograma académico</a> 
               </div>
             </li>
             <li class="nav-item my-menu-hover">
@@ -164,7 +164,7 @@
                 class="dropdown-menu gris01"
                 aria-labelledby="navbarDropdown"
               >
-                <a class="dropdown-item gris02" href="../procedimientos/consultas.html"
+                <a class="dropdown-item gris02" href="consultas.html"
                   >Preguntas Frecuentes</a
                 >
               </div>
@@ -183,7 +183,7 @@
             <div class="col-9 informacion-nosotros">
               <div class="row nosotros">
                 <div class="col-md-8 ml-auto mr-auto text-center">
-                    <h3>ACERCA DE NOSOTROS</h3>
+                    <h3 id="acerca-de-nosotros">ACERCA DE NOSOTROS</h3>
                     <p>
                         La Dirección Universitaria de Formación Académica (DUFA) es un órgano de línea del Vicerrectorado Académico encargada de formular y proponer políticas de gestión académica de la Universidad.
                     </p>
@@ -191,13 +191,13 @@
           </div>
           <div class="row nosotros">
                 <div class="col-lg-6 col-md-6 col-sm-12">
-                    <h4>Misión</h4>
+                    <h4 id="mision">Misión</h4>
                     <p>
                       La Dirección Universitaria de Formación Académica (DUFA), tiene como propósito, hacer posible que todas las actividades académicas de la universidad se desarrollen con eficiencia y eficacia, generando procedimientos agiles y sencillos.
                     </p>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12">
-                    <h4>Visión</h4>
+                    <h4 id="vision">Visión</h4>
                     <p>
                       La Dirección Universitaria de Formación Académica (DUFA), debe constituirse en un órgano de gestión moderna, con tecnología de punta, que acompañe al desarrollo sostenido de la Universidad.
                     </p>
@@ -208,16 +208,17 @@
               <img src="../images/banner3.jpg" class="img-fluid mb-5" alt="universidad">
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12  nosotros">
-              <h4>BREVE HISTORIA</h4>
+              <h4 id="resena-historica">RESEÑA HISTÓRICA</h4>
               <P>La Dirección Universitaria de Formación Académica (DUFA), dependencia del Vicerrectorado Académico, fue creada el 28 de diciembre del 2016, mediante RCU N° 1156-2016. Antes de esta fecha, se llamaba Oficina de Coordinación y Supervisión Académica.</P>
-              <p>En la actualidad cuenta con cuatro oficinas: Oficina de Gestión Curricular y Supervisión Académica, Oficina de Registro Académico, Oficina de Estudios Generales, Oficina de Recursos Educativos.</p>
+              <p>DUFA cuenta con cuatro oficinas: Oficina de Gestión Curricular y Supervisión Académica, Oficina de Registro Académico, Oficina de Estudios Generales, Oficina de Recursos Educativos.</p>
+              <p>Se instituye como fecha de aniversario de la Dirección Universitaria de Formación Académica, el día 7 de octubre de todos los años.</p>
             </div>
             <div class="col-lg-12 col-md-12 col-sm-12 mb-5 mr-auto text-center polit-calidad">
-              <h4>Política de Calidad</h4>
+              <h4 id="politica-calidad">Política de Calidad</h4>
               <p>Desarrollar procesos de mejora continua orientados a la búsqueda de satisfacción total de nuestros usuarios.</p>
             </div>
             <div class="col-12 text-center nosotros mb-5">
-              <h4>ORGANIGRAMA</h4>
+              <h4 id="organigrama">ORGANIGRAMA</h4>
               <!-- <img src="../images/organigrama.png" class="img-fluid zoom mb-5" alt="organigrama"> -->
               <iframe src="../formatos/organigrama.pdf" style="width:80%; height:500px;" frameborder="0"> </iframe>
             </div>
@@ -226,12 +227,12 @@
             <div class="col-3">
               <div class="wd-men-pag menu-nosotros">
                 <h2>NOSOTROS</h2>
-                <ul class="list-unstyled grisb01 img-rounded fnt-10"><li id="menu-item-621" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-621"><a href="https://www.unsa.edu.pe/resena-historica/">Reseña Histórica</a></li>
-                    <li id="menu-item-619" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-619"><a href="nosotros.html">Misión</a></li>
-                    <li id="menu-item-618" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-618"><a href="nosotros.html">Visión</a></li>
-                    <li id="menu-item-622" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-622"><a href="https://www.unsa.edu.pe/rector-de-la-universidad/">Politica de Calidad</a></li>
-                    <li id="menu-item-514" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-514"><a href="https://www.unsa.edu.pe/vice-rectora-academica/">Organización</a></li>
-                    <li id="menu-item-632" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-632"><a href="https://www.unsa.edu.pe/vice-rector-de-investigacion/">Organigrama</a></li>
+                <ul class="list-unstyled grisb01 img-rounded fnt-10"><li id="menu-item-621" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-621"><a href="#resena-historica">Reseña Histórica</a></li>
+                    <li id="menu-item-619" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-619"><a href="#mision">Misión</a></li>
+                    <li id="menu-item-618" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-618"><a href="#vision">Visión</a></li>
+                    <li id="menu-item-622" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-622"><a href="#politica-calidad">Política de Calidad</a></li>
+                    <li id="menu-item-514" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-514"><a href="./organizacion.html">Organización</a></li>
+                    <li id="menu-item-632" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-632"><a href="#organigrama">Organigrama</a></li>
 
                 </ul>                                          
             </div>
