--- a/procedimientos/organizacion.html
+++ b/procedimientos/organizacion.html
@@ -94,8 +94,9 @@
               <div class="dropdown-menu gris01" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item gris02" href="../index.html">Inicio</a>
                 <a class="dropdown-item gris02" href="nosotros.html">Nosotros</a>
-                <a class="dropdown-item gris02" href="#">Documentos académicos</a> 
-                <a class="dropdown-item gris02" href="#">Cronograma académico</a>  
+                <a class="dropdown-item gris02" href="documentos-academicos.html">Documentos académicos</a> 
+                <a class="dropdown-item gris02" href="cronograma-academico.html">Cronograma académico</a> 
+  
               </div>
             </li>
             <li class="nav-item my-menu-hover">
@@ -148,7 +149,7 @@
                 class="dropdown-menu gris01"
                 aria-labelledby="navbarDropdown"
               >
-                <a class="dropdown-item gris02" href="#"
+                <a class="dropdown-item gris02" href="consultas.html"
                   >Preguntas Frecuentes</a
                 >
               </div>
@@ -282,14 +283,14 @@
             <div class="col-12 col-md-3">
                 <div class="wd-men-pag menu-nosotros">
                     <h2>NOSOTROS</h2>
-                    <ul class="list-unstyled grisb01 img-rounded fnt-10"><li id="menu-item-621" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-621"><a href="https://www.unsa.edu.pe/resena-historica/">Reseña Histórica</a></li>
-                        <li id="menu-item-619" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-619"><a href="nosotros.html">Misión</a></li>
-                        <li id="menu-item-618" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-618"><a href="nosotros.html">Visión</a></li>
-                        <li id="menu-item-622" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-622"><a href="https://www.unsa.edu.pe/rector-de-la-universidad/">Politica de Calidad</a></li>
-                        <li id="menu-item-514" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-514"><a href="https://www.unsa.edu.pe/vice-rectora-academica/">Organización</a></li>
-                        <li id="menu-item-632" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-632"><a href="https://www.unsa.edu.pe/vice-rector-de-investigacion/">Organigrama</a></li>
-
-                    </ul>                                          
+                    <ul class="list-unstyled grisb01 img-rounded fnt-10"><li id="menu-item-621" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-621"><a href="./nosotros.html#resena-historica">Reseña Histórica</a></li>
+                      <li id="menu-item-619" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-619"><a href="./nosotros.html#mision">Misión</a></li>
+                      <li id="menu-item-618" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-618"><a href="./nosotros.html#vision">Visión</a></li>
+                      <li id="menu-item-622" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-622"><a href="./nosotros.html#politica-calidad">Política de Calidad</a></li>
+                      <li id="menu-item-514" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-514"><a href="#">Organización</a></li>
+                      <li id="menu-item-632" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-632"><a href="./nosotros.html#organigrama">Organigrama</a></li>
+  
+                  </ul>                                           
                 </div>
             </div>
         </div>
