--- a/procedimientos/gestCertificaciones.html
+++ b/procedimientos/gestCertificaciones.html
@@ -49,7 +49,9 @@
                   <a class="nav-link dropdown-toggle my-menu active" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">INICIO</a>
                   <div class="dropdown-menu gris01" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item gris02" href="../index.html">Inicio</a>
-                    <a class="dropdown-item gris02" href="./nosotros.html">Nosotros</a>  
+                    <a class="dropdown-item gris02" href="./nosotros.html">Nosotros</a>
+                    <a class="dropdown-item gris02" href="documentos-academicos.html">Documentos académicos</a> 
+                    <a class="dropdown-item gris02" href="cronograma-academico.html">Cronograma académico</a>  
                   </div>
                 </li>
                 <li class="nav-item my-menu-hover d-flex align-items-center justify-content-center">
