--- a/procedimientos/gestCurricular.html
+++ b/procedimientos/gestCurricular.html
@@ -49,7 +49,9 @@
                   <a class="nav-link dropdown-toggle my-menu active" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">INICIO</a>
                   <div class="dropdown-menu gris01" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item gris02" href="../index.html">Inicio</a>
-                    <a class="dropdown-item gris02" href="#">Nosotros</a>  
+                    <a class="dropdown-item gris02" href="#">Nosotros</a>
+                    <a class="dropdown-item gris02" href="documentos-academicos.html">Documentos académicos</a> 
+                    <a class="dropdown-item gris02" href="cronograma-academico.html">Cronograma académico</a>   
                   </div>
                 </li>
                 <li class="nav-item my-menu-hover d-flex align-items-center justify-content-center">
@@ -114,8 +116,8 @@
                             <div class="card" style="width: 18rem;">
                               <div class="card-body">
                                 <h5>REGLAMENTOS</h5>
-                                <p>Documento.pdf</p>
-                                <a href="#" class="card-link">Ver/Descargar</a>
+                                <p>REGLAMENTO PARA LA REVALIDACIÓN Y RECONOCIMIENTO DE GRADOS</p>
+                                <a href="../formatos/REGLAMENTO PARA LA REVALIDACION Y RECONOCIMIENTO DE GRADOS A.pdf" class="card-link" target="_blank">Ver/Descargar</a>
                               </div>
                             </div>
                             <div class="card" style="width: 18rem;">
@@ -143,7 +145,7 @@
                               <div class="card-body">
                                 <h5>FORMATOS</h5>
                                 <p>PLAN DE FUNCIONAMIENTO.pdf</p>
-                                <a href="../formatos/Fomato 1 Plan de Funcionamiento" class="card-link">Ver/Descargar</a>
+                                <a href="../formatos/Fomato 1 Plan de Funcionamiento" class="card-link" target="_blank">Ver/Descargar</a>
                               </div>
                             </div>
                             <div class="card" style="width: 18rem;">
@@ -199,9 +201,9 @@
                           <div class="col-12 col-lg-4 img-regl">
                             <div class="card" style="width: 18rem;">
                               <div class="card-body">
-                                <h5>REGLAMENTOS</h5>
-                                <p>Documento.pdf</p>
-                                <a href="#" class="card-link">Ver/Descargar</a>
+                                <h5>FORMATO</h5>
+                                <p>FORMATO PARA SILABOS</p>
+                                <a href="../formatos/Formato para silabos.pdf" class="card-link" target="_blank">Ver/Descargar</a>
                               </div>
                             </div>
                             <div class="card" style="width: 18rem;">
