--- a/procedimientos/gestRegistroNotas.html
+++ b/procedimientos/gestRegistroNotas.html
@@ -49,7 +49,9 @@
                   <a class="nav-link dropdown-toggle my-menu active" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">INICIO</a>
                   <div class="dropdown-menu gris01" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item gris02" href="../index.html">Inicio</a>
-                    <a class="dropdown-item gris02" href="./nosotros.html">Nosotros</a>  
+                    <a class="dropdown-item gris02" href="./nosotros.html">Nosotros</a>
+                    <a class="dropdown-item gris02" href="documentos-academicos.html">Documentos académicos</a> 
+                    <a class="dropdown-item gris02" href="cronograma-academico.html">Cronograma académico</a>   
                   </div>
                 </li>
                 <li class="nav-item my-menu-hover d-flex align-items-center justify-content-center">
@@ -86,7 +88,7 @@
                 <div class="col-12 col-md-3 my-4">
                   <div class="nav flex-column nav-pills " id="v-pills-tab" role="tablist" aria-orientation="vertical">
                     <a class="nav-link style-mv-color my-1 active show" id="v-pills-grn-uno-tab" data-toggle="pill" href="#v-pills-grn-uno" role="tab" aria-controls="v-pills-grn-uno" aria-selected="true">Registro de notas</a>
-                    <a class="nav-link style-mv-color my-1" id="v-pills-grn-dos-tab" data-toggle="pill" href="#v-pills-grn-dos" role="tab" aria-controls="v-pills-grn-dos" aria-selected="false">Tramite de examen rezagado</a>
+                    <a class="nav-link style-mv-color my-1" id="v-pills-grn-dos-tab" data-toggle="pill" href="#v-pills-grn-dos" role="tab" aria-controls="v-pills-grn-dos" aria-selected="false">Trámite de examen rezagado</a>
                     <a class="nav-link style-mv-color my-1" id="v-pills-grn-tres-tab" data-toggle="pill" href="#v-pills-grn-tres" role="tab" aria-controls="v-pills-grn-tres" aria-selected="false">Modificación de notas</a>
                     <a class="nav-link style-mv-color my-1" id="v-pills-grn-cuatro-tab" data-toggle="pill" href="#v-pills-grn-cuatro" role="tab" aria-controls="v-pills-grn-cuatro" aria-selected="false">Generación de Actas de Notas</a>
                   </div>
@@ -131,7 +133,7 @@
                       <!-- SEGUNDO CONTENEDOR -->
                       <div class="tab-pane fade" id="v-pills-grn-dos" role="tabpanel" aria-labelledby="v-pills-grn-dos-tab">
                         <div class="row my-2 style-pill">
-                          <h4 class="subtitulo">Tramite de examen rezagado</h4>
+                          <h4 class="subtitulo">Trámite de examen rezagado</h4>
                         </div>
                         <div class="row my-2 style-pill">
                           <div class="col-12 col-lg-8 img-regl">
@@ -142,8 +144,8 @@
                             <div class="card" style="width: 18rem;">
                               <div class="card-body">
                                 <h5>REGLAMENTOS</h5>
-                                <p>Documento.pdf</p>
-                                <a href="#" class="card-link">Ver/Descargar</a>
+                                <p>documento</p>
+                                <a href="#" class="card-link" target="_blank">Ver/Descargar</a>
                               </div>
                             </div>
                             <div class="card" style="width: 18rem;">
@@ -171,8 +173,8 @@
                             <div class="card" style="width: 18rem;">
                               <div class="card-body">
                                 <h5>REGLAMENTOS</h5>
-                                <p>Documento.pdf</p>
-                                <a href="#" class="card-link">Ver/Descargar</a>
+                                <p>REGLAMENTO DEL PROCESO DE REGISTRO DE NOTAS Y SU EVALUACIÓN</p>
+                                <a href="../formatos/Modificacion de notas articulo 15.pdf" class="card-link" target="_blank">Ver/Descargar</a>
                               </div>
                             </div>
                             <div class="card" style="width: 18rem;">
